[package]
name = "nourl"
version = "0.1.4"
edition = "2021"
description = "A simple Url primitive for no_std environments"
readme = "README.md"
repository = "https://github.com/rmja/nourl"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
license = "MIT / Apache-2.0"
keywords = ["embedded", "url", "no_std"]
exclude = [".github"]

[dependencies]
defmt = { version = "1.0", optional = true }
